--- a/linguagens-api/src/main/resources/application.properties
+++ b/linguagens-api/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.servlet.multipart.max-file-size=1MB
 spring.servlet.multipart.max-request-size=1MB
 
 # image storage location
-uploadingfiles.storage.local.diretorio-fotos=C:\\Users\\fabri\\OneDrive\\Documentos\\workspaces\\uploadfiles\\linguagens-api\\linguagens-img
+uploadingfiles.storage.local.diretorio-fotos=C:\\Users\\uploadfiles\\linguagens-api\\linguagens-img
 
 #Datails for our datasource
 spring.datasource.url=jdbc:mysql://localhost/linguagensdb?createDatabaseIfNotExist=true&serverTimezone=UTC
